--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Holger Koenemann",
   "license": "GPL-2.0",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "bootstrap": "4.3.1",
     "undescores-for-npm": "^1.0.0"
   },
